; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/server/extr_sv_bot.c_BotImport_HunkAlloc.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/server/extr_sv_bot.c_BotImport_HunkAlloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERR_DROP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"SV_Bot_HunkAlloc: Alloc with marks already set\0A\00", align 1
@h_high = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @BotImport_HunkAlloc(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i64 (...) @Hunk_CheckMark()
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32, i32* @ERR_DROP, align 4
  %7 = call i32 @Com_Error(i32 %6, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  br label %8

8:                                                ; preds = %5, %1
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @h_high, align 4
  %11 = call i8* @Hunk_Alloc(i32 %9, i32 %10)
  ret i8* %11
}

declare dso_local i64 @Hunk_CheckMark(...) #1

declare dso_local i32 @Com_Error(i32, i8*) #1

declare dso_local i8* @Hunk_Alloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
